--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=Wallet-Service
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/walletService
+spring.datasource.username=postgres
+spring.datasource.password=Password
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+# Optional: Show SQL for debugging
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
